--- a/code/2025Q3/20250727_股票和基金/y-initialize_workspace.ipynb
+++ b/code/2025Q3/20250727_股票和基金/y-initialize_workspace.ipynb
@@ -31,8 +31,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6d43c38-82b1-4939-a3e0-e48ae1d9190b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A股股票数据下载工具\n",
+      "==================================================\n",
+      "2026-02-25 23:27:51,235 - INFO - 开始下载所有A股股票数据...\n",
+      "2026-02-25 23:27:51,235 - INFO - 正在获取A股股票列表...\n",
+      "2026-02-25 23:28:06,118 - INFO - 成功获取 4586 只A股股票信息\n",
+      "2026-02-25 23:28:06,118 - INFO - 准备下载 4586 只股票的数据\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/ml12/lib/python3.12/site-packages/pandas/core/indexes/base.py\", line 3805, in get_loc\n",
+      "    return self._engine.get_loc(casted_key)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"index.pyx\", line 167, in pandas._libs.index.IndexEngine.get_loc\n",
+      "  File \"index.pyx\", line 196, in pandas._libs.index.IndexEngine.get_loc\n",
+      "  File \"pandas/_libs/hashtable_class_helper.pxi\", line 7081, in pandas._libs.hashtable.PyObjectHashTable.get_item\n",
+      "  File \"pandas/_libs/hashtable_class_helper.pxi\", line 7089, in pandas._libs.hashtable.PyObjectHashTable.get_item\n",
+      "KeyError: 'code'\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/minkexiu/Documents/GitHub/RWF_task1/code/2025Q3/20250727_股票和基金/hhd.py\", line 172, in <module>\n",
+      "    main()\n",
+      "  File \"/Users/minkexiu/Documents/GitHub/RWF_task1/code/2025Q3/20250727_股票和基金/hhd.py\", line 157, in main\n",
+      "    success = download_all_stocks_data(\n",
+      "              ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/minkexiu/Documents/GitHub/RWF_task1/code/2025Q3/20250727_股票和基金/hhd.py\", line 115, in download_all_stocks_data\n",
+      "    stock_code = row['code']\n",
+      "                 ~~~^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/ml12/lib/python3.12/site-packages/pandas/core/series.py\", line 1121, in __getitem__\n",
+      "    return self._get_value(key)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/ml12/lib/python3.12/site-packages/pandas/core/series.py\", line 1237, in _get_value\n",
+      "    loc = self.index.get_loc(label)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/ml12/lib/python3.12/site-packages/pandas/core/indexes/base.py\", line 3812, in get_loc\n",
+      "    raise KeyError(key) from err\n",
+      "KeyError: 'code'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python hhd.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1860a84-231e-4cf2-aeef-579344221292",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75f23c2-e43c-4d09-bd20-36c2f3170cef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "462b850b-8300-43d2-928f-abdc497aa8e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cfb354c-6ba3-49dc-baf9-75ff4461207f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fca26106-760d-46b6-aa5a-4b410f7e318c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "611de34e-162a-4dee-a757-e41b37b507e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d1d7ad5-9f39-4925-a228-289395d88917",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
